tests/parsing-test/test_out/one-line-struct-parse-out.txt
error: expected Ident but got 'struct'
 --> one-line-struct\root.ctl:1:5
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |     ^^^^^^ token located here
  |

error: expected String but got 'struct'
 --> one-line-struct\root.ctl:1:5
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |     ^^^^^^ token located here
  |

error: expected '\n' | ';' | ']' but got <eof>
 --> one-line-struct\root.ctl:1:123
  |
1 | pub struct OneLineStruct {     pub use mut filed : Trough ; other_field : SimpleStuff ; priv pointer : ^     mut ^ int ; }
  |                                                                                                                            token located here
  |

